2012-06-26  Per Bothner  <per@bothner.com>

	* BufferLocal.java: Update for Location being made generic.

2011-10-21  Shad Gregory <captshadg@gmail.com>
	    Per Bothner  <per@bothner.com>

	* emacs.scm (load-init-file): New function.
	(emacs): Call load-init-file.

2011-05-02  Shad Gregory <captshadg@gmail.com>

	* EFrame.java (showInfoMessage): New method.
	* Marker.java (evalLastSexp): New method.
	* emacs.scm (message, eval-last-sexp): New methods.
	(global-map): Map "\C-x\C-e" to eval-last-sexp.

2011-05-01  Shad Gregory <captshadg@gmail.com>
	    Per Bothner  <per@bothner.com>

	* Marker.java (repeatChar): New static method.
	(insertChar): Make use of repeatChar.

2011-04-15  Per Bothner  <per@bothner.com>
	    Shad Gregory <captshadg@gmail.com>

	* EWindow.java (linkSibling): Fix thinko.
	(deleteOtherWindows): Fix logic error.
	This fixes Savannah bug#33019 (C-x1 produces a nullpointer exception).

2011-04-10  Shad Gregory <captshadg@gmail.com>
	    Per Bothner  <per@bothner.com>

	* emacs.scm (about-jemacs): New function.
	* EFrame.java (aboutMessage): New method.
	(showAboutMessage): New abstract method.
	This fixes Savannah bug#16307 (Failure on "Help").

2011-04-10  Per Bothner  <per@bothner.com>

	* emacs.scm (read-dialog): Simplify.

	* emacs.scm (erase-buffer): Add missing parentheses.

	* emacs.scm (process?): Fix thinko.

2010-08-19  Per Bothner  <per@bothner.com>

	* ReplMode.java: Use new Future.make factory method.

2009-01-14  Per Bothner  <per@bothner.com>

	* emacs.scm (scheme-interaction-window, elisp-interaction-window):
	Update to use string literal rather than symbol.

2008-10-29  Per Bothner  <per@bothner.com>

	* Marker.java (insertChar): Return immediately on zero count.

2008-05-26  Per Bothner  <per@bothner.com>

	* Buffer.java (readOnly): New field.
	(getReadOnly, setReadOnly): New accessors.
	* BufferLocal.java (readOnlyVar): New static field.
	(make): Change return type from void.