@@ -1,3 +1,8 @@
+2013-09-15  Per Bothner  <per@bothner.com>
+
+	* EWindow.java (handleCommand): Handle 'emacs-interactive' property
+	that is a Procedure, not just a string.
+
 2012-06-26  Per Bothner  <per@bothner.com>
 
 	* BufferLocal.java: Update for Location being made generic.
